# sso-zenna-client

./: LICENSE  README.md  pyproject.toml
sso_zenna/: __init__.py  base.py  exceptions.py  jwt_verify.py  models.py  service_client.py  user_client.py
sso_zenna/exmples/: example_admin.py  example_auto_role_scopes_additing.py  example_service.py  example_user.py
tests/: .env.test.example  conftest.py  handle_generate_access.py  test_service_client.py  test_user_client.py
